docs: 把文档从nicegui的架构移植到flet

--- a/docs/architecture/system/批量处理架构.md
+++ b/docs/architecture/system/批量处理架构.md
@@ -1,83 +1,82 @@
 # 架构设计：批量处理系统 (V2.3 - Batch Processing)
 
 ## 1. 设计愿景
-批量处理（Batch Processing）旨在通过高并发仿真实现统计学验证与参数调优。其核心不是“跑很多次”，而是回答“如果不确定性存在，结果的可信度是多少？”以及“当参数 X 变化时，DPS 曲线如何响应？”。
+批量处理（Batch Processing）旨在通过高并发仿真实现统计学验证与参数调优。V2.3 核心引入了 **“基准修改器 (Base Modifier)”** 模式：即通过定义一组“修改规则”，从单一的“基准配置 (Base Config)”中自动派生出大量仿真变体。
 
-## 2. 系统架构：主从模式 (Master-Worker)
+---
+
+## 2. 核心概念：基准修改器 (Base Modifier)
+
+不同于手动创建多份配置，用户仅需维护一个基准状态，并叠加一组 **修改规则 (Modification Rules)**。
+
+### 2.1 执行流程图
+
+```mermaid
+graph TD
+    A[UI: 基准配置 Base Config] --> B{是否存在修改规则?}
+    B -- 是 --> C[ConfigGenerator: 执行笛卡尔积组合]
+    B -- 否 --> D[执行单次仿真]
+    
+    C --> E[派生变体队列 Variant Queue]
+    E --> F[Master: 分发任务至 ProcessPool]
+    
+    subgraph Worker Process
+        F --> G[子进程初始化 initialize_registry]
+        G --> H[create_simulator_from_config]
+        H --> I[TeamFactory: 根据变体 JSON 重新实例化实体]
+        I --> J[Simulator.run: 执行仿真]
+        J --> K[提取 Summary Metrics]
+    end
+    
+    K --> L[Master: 结果聚合与统计分析]
+    L --> M[UI: 展示报表与图表]
+```
+
+### 2.2 修改规则的构成
+每一条规则包含以下要素：
+*   **目标 (Target)**: 采用嵌套路径标识（如 `team[0].weapon.refinement`）。
+*   **模式 (Mode)**:
+    *   `SWEEP` (区间扫描): 定义 `[start, end, step]` 生成等差数列。
+    *   `REPLACE` (固定替换): 提供一个显式的值列表 `[val1, val2, ...]`。
+    *   `RANDOM` (随机波动): 定义随机范围，用于蒙特卡洛敏感度分析。
+*   **标签 (Label)**: 用于 UI 标识规则名称。
+
+### 2.2 变体生成逻辑
+`ConfigGenerator` 接收基准配置和规则集，执行 **笛卡尔积 (Cartesian Product)** 计算。
+例如：
+- 规则 A (3个值) ❌ 规则 B (4个值) = **12 个仿真样本**。
+
+---
+
+## 3. 系统架构：主从模式 (Master-Worker)
 
 采用基于 `multiprocessing` 的并行计算架构，确保 CPU 密集型任务能够利用多核性能。
 
-### 2.1 Master 节点 (Controller)
-*   **职责**: 
-    *   解析用户意图（参数扫描范围、随机种子策略）。
-    *   生成 N 份独立的 `SimulationConfig` 字典。
-    *   管理 `ProcessPoolExecutor` 进程池。
-    *   实时收集进度并驱动 UI 进度条。
-    *   聚合 Worker 返回的轻量级指标，生成最终报表。
+### 3.1 Master 节点 (Controller)
+*   **职责**: 解析规则集，生成变体队列，管理进程池并聚合轻量级结果。
 
-### 2.2 Worker 节点 (Headless Simulator)
-*   **职责**:
-    *   **独立初始化**: 每个子进程启动时必须独立加载 `Registry` 和 `Logger`，避免全局状态污染。
-    *   **无副作用**: 禁用 SQLite 单帧快照写入 (`persistence_db=None`)，仅在内存中运行。
-    *   **轻量级回报**: 仿真结束后，仅提取 Total Damage、DPS、Energy Efficiency 等关键标量返回给 Master。
+### 3.2 Worker 节点 (Headless Simulator)
+*   **职责**: 独立初始化环境，禁用单帧快照以提速，仅返回 Summary 指标。
 
 ---
 
-## 3. 核心组件
+## 4. 隔离性与持久化设计 (Isolation & Persistence)
 
-### 3.1 `ConfigGenerator` (配置生成器)
-支持两种生成模式：
-*   **参数扫描 (Parametric Sweep)**: 给定变量路径（如 `char.xiangling.stats.crit_rate`）和值列表，生成笛卡尔积组合。
-*   **蒙特卡洛 (Monte Carlo)**: 针对同一份配置，注入不同的 RNG Seed，以评估暴击分布或操作延迟的影响。
-
-### 3.2 `BatchRunner` (执行引擎)
-封装了 `asyncio` 与 `ProcessPoolExecutor` 的交互逻辑。提供异步的 `run_batch(configs, callback)` 接口，允许 UI 在不阻塞主线程的情况下等待批量任务完成。
-
-### 3.3 `ResultAggregator` (统计分析)
-负责对 N 次仿真的结果进行统计学计算：
-*   **Mean**: 平均 DPS。
-*   **Std Dev**: 标准差（稳定性指标）。
-*   **P95/P5**: 排除极端运气后的上下限。
-
----
-
-## 4. 数据流 (Data Flow)
-
-1.  **UI 输入**: 用户定义 Base Config + 变量区间 `[0.5, 0.6, 0.7]`。
-2.  **Generate**: Master 生成 3 份具体的 Config Bundle。
-3.  **Dispatch**: Master 将 Bundle 序列化并通过 Pickle 发送给 3 个 Worker 进程。
-4.  **Execute**: Worker 独立反序列化，构建 `Simulator`，跑完 18000 帧。
-5.  **Collect**: Worker 返回 `SimulationMetrics` 对象。
-6.  **Update**: Master 更新进度条 (1/3 -> 2/3 -> 3/3)。
-7.  **Aggregate**: Master 计算汇总指标，生成 `BatchSummary`。
-
----
-
-## 5. 隔离性设计 (Isolation)
-
-为了确保多进程安全，必须遵循以下原则：
-*   **无共享状态**: Worker 之间不共享任何内存对象。
-*   **数据库连接**: `MySQLDataRepository` 必须在 Worker 内部实例化（即每个进程一个连接），严禁跨进程传递连接对象。
-*   **日志静默**: 批量模式下，Worker 默认关闭控制台日志，仅在发生未捕获异常时向 stderr 输出。
-
-## 5. 隔离性与持久化设计 (Isolation & Persistence)
-
-### 5.1 进程级别隔离
+### 4.1 进程级别隔离
 *   **无共享状态**: 每个 Worker 拥有独立的 Python 进程空间。
-*   **按需初始化**: 在 Worker 函数内部显式调用 `initialize_registry()` 和 `logger_init()`，确保子进程环境干净。
-*   **数据库**: `MySQLDataRepository` 在 Worker 内部实例化，避免连接池跨进程失效。
+*   **独立连接**: `MySQLDataRepository` 在 Worker 内部实例化。
 
-### 5.2 结构化日志持久化
-为了兼顾性能与可调试性，批量模式采取 **“日志文件隔离”** 策略：
-*   **目录结构**: 每次任务创建子文件夹 `data/log/Batch/batch_YYYYMMDD_HHMMSS/`。
-*   **文件名**: 每个仿真样本对应一个 `run_{index}.log` 文件。
-*   **异常捕获**: 子进程中的 `Simulator` 会捕获所有未处理异常，并利用其专属 Logger 将完整的 Traceback 写入对应的日志文件。
-
-## 6. UI 交互流 (UX Flow)
-
-1.  **单次模式 (Single)**: 默认执行。记录详细的 SQLite 快照 (`last_simulation.db`)，主要用于战后详细回溯。
-2.  **批量模式 (Batch)**: 通过 UI 侧边栏切换。采用蒙特卡洛/参数扫描模式运行。仅记录轻量级 Summary，通过 Footer 状态栏反馈任务进度 (Completed/Total)。
+### 4.2 结构化日志持久化
+*   **日志文件隔离**: 每个样本对应一个 `run_{index}.log` 文件，存放在任务专属的时间戳子目录中。
 
 ---
-*版本: V2.3 (Stable Implementation)*
+
+## 5. UI 交互流 (UX Flow)
+
+1.  **基准确立**: 用户在工作台配置好当前队伍的基准状态。
+2.  **规则定义 (Modifier Editor)**: 在批量面板中添加规则。UI 支持点选变量路径并配置扫描参数。
+3.  **派生运行**: 点击仿真后，系统自动派生任务队列并展示 `BATCH: 已完成 / 总样本数` 进度。
+
+---
+*版本: V2.3 (Base Modifier Pattern)*
 *日期: 2026-02-09*
