--- a/docs/architecture/system/架构概览.md
+++ b/docs/architecture/system/架构概览.md
@@ -1,41 +1,47 @@
-# 原神伤害计算器 - 架构概览 (V2.3 - 意图驱动版)
+# 原神伤害计算器 - 架构概览 (V3.0 - 分支宇宙版)
 
 ## 1. 设计哲学
-本项目采用 **“场景中心化 (Scene-Centric)”** 与 **“事件驱动 (Event-Driven)”** 的设计理念。在 V2.3 中，我们引入了 **“意图驱动 (Intent-Driven)”** 架构，将用户交互（Intent）与底层物理仿真（Action）彻底解耦，实现了高保真的战斗模拟。
+本项目采用 **“场景中心化 (Scene-Centric)”** 与 **“事件驱动 (Event-Driven)”** 的设计理念。在 V3.0 中，我们引入了 **“分支宇宙 (Branching Universe)”** 架构，允许用户通过交互式脑图管理数千种变量组合，并通过 **“意图驱动 (Intent-Driven)”** 协议实现 UI 参数与后端动作逻辑的无缝解耦。
 
 ## 2. 数据与存储架构 (Dual-DB Pattern)
-项目采用双数据库协作模式，以平衡权威数据一致性与实时仿真性能：
-*   **核心资产库 (MySQL)**: 存储角色、武器、圣遗物的基础属性、等级表及静态倍率。作为“真理来源”，确保多端数据对齐。
-*   **实时回溯库 (SQLite)**: 用于记录单次仿真的全帧快照（State Snapshots）与事件序列。支持 UI 进行“任意帧回溯”与 DPS 曲线动态分析。
+项目采用双数据库协作模式：
+*   **核心资产库 (MySQL/Cloud)**: 存储角色、武器、圣遗物的静态基准数据。
+*   **实时回溯库 (SQLite)**: 记录单次仿真的全帧快照（State Snapshots）与事件流。V3.0 支持异步流式写入，确保 UI 在重负载仿真下依然流畅。
 
 ## 3. 系统分层架构
 
 ### 3.1 基础设施层 (Infrastructure)
-*   **`SimulationContext`**: 系统的“真理来源”。持有当前帧数、战斗空间 (`CombatSpace`)、事件引擎 (`EventEngine`) 和所有实体的引用。通过 `ContextVar` 实现协程级逻辑隔离。
-*   **`Registry`**: 自动发现与加载机制。基于 Python 的包探测技术，自动注册角色类、武器类及效果对象。
-*   **`ActionCommand Protocol`**: V2.3 核心协议。将 UI 产生的逻辑意图（如 {"type": "Hold"}）封装为标准指令，透传至后端。
+*   **`SimulationContext`**: 全局上下文管理。通过 `ContextVar` 隔离多线程/协程环境，持有战斗空间、事件引擎。
+*   **`Registry`**: 模块自动发现机制。V3.0 强化了元数据反射逻辑，支持 UI 动态解析角色能力。
+*   **`ActionCommand Protocol`**: V3.0 核心。将 UI 操作抽象为指令（Commands）与意图（Intents），例如：`{"action_id": "elemental_skill", "params": {"hold": True}}`。
 
 ### 3.2 物理与场景层 (Scene & Physics)
-*   **`CombatSpace`**: 核心空间管理器。维护实体坐标 (X, Z) 与朝向，执行高精度几何碰撞检测（圆柱、长方体、扇形）。
-*   **`CombatEntity`**: 基础战斗实体。管理生命周期、元素附着（Aura）和 ICD。
+*   **`CombatSpace`**: 核心空间管理。支持高精度几何碰撞检测及实体位移平摊。
+*   **`CombatEntity`**: 基础战斗实体。内置状态机、元素附着逻辑（Aura）与 ICD 控制。
 
 ### 3.3 动作与控制层 (Action & ASM)
-*   **`ActionManager (ASM)`**: 动作状态机引擎。控制实体的动作时间轴，处理判定点、位移平摊、动作取消窗口（Cancel Window）。
-*   **`Skill System & Metadata`**: 技能层通过类方法 `get_action_metadata()` 声明参数 Schema，并实现 `to_action_data()` 将意图意图转换为具体的物理动作块（ActionFrameData）。
+*   **`ActionManager (ASM)`**: 动作状态机引擎。负责处理动作时间轴、判定帧、前摇取消（Animation Cancel）以及技能流转逻辑。
+*   **`Metadata System`**: 技能层通过类方法 `get_action_metadata()` 声明参数 Schema，UI 根据此元数据动态生成控件。
 
 ### 3.4 业务子系统层 (Systems)
-*   **`DamageSystem`**: 处理伤害快照、广播、受击响应及数值结算流水线。
-*   **`ResultDatabase (SQLite)`**: 采用异步队列模式，在主循环运行期间流式记录帧快照。
+*   **`DamageSystem`**: 伤害流水线。处理快照、广播、受击响应、反应结算及数值合并。
+*   **`BatchRunner`**: V3.0 新增。利用 `ProcessPoolExecutor` 实现多进程并行仿真，支持千级样本的高并发运行。
 
-## 4. 业务表现层 (GUI - NiceGUI)
-采用 **"MD3 Panes"** 面板化架构，并实施了 **“状态-视图分离 (State-View Separation)”** 模式。
+## 4. 业务表现层 (GUI - Flet Workbench)
+基于 **Flet (Flutter Engine)** 构建的响应式桌面工作台，核心流程分为三个阶段：
 
-### 4.1 核心驱动流
-1.  **策略筹备 (Strategic)**: 从 MySQL 加载角色资产，配置队伍与初始坐标。
-2.  **战术编排 (Tactical)**: UI 基于 Metadata 动态生成 **Inspector**，用户通过意图参数定义动作序列。
-3.  **实时仿真 (Simulation)**: `Simulator` 驱动时间轴，同步将快照写入 SQLite，并通过进度回调反馈至 UI Footer。
-4.  **战果复盘 (Review)**: (开发中) 从 SQLite 读取数据，展示 DPS 曲线与详细战斗记录。
+### 4.1 策略筹备 (Strategic Phase)
+*   **分支宇宙画布**: 以根节点为基准，用户通过添加“变异节点”派生不同宇宙。
+*   **属性编辑器**: 针对特定角色、武器、圣遗物进行精细化数值配置。
+
+### 4.2 战术编排 (Tactical Phase)
+*   **动作序列编辑器**: 拖拽式排列角色指令。
+*   **动态检视器 (Inspector)**: 自动根据角色元数据生成参数编辑控件（Dropdown, Slider 等）。
+
+### 4.3 战果复盘 (Review Phase)
+*   **全景对比**: 实时将仿真 DPS 标注在宇宙节点的叶子节点。
+*   **帧级回溯**: 点击特定节点，加载该分支的 SQLite 数据，实现任意帧状态复现与伤害明细追溯。
 
 ---
-*版本: v2.3.0 (Intent & Dual-DB)*
+*版本: v3.0.0 (Branching Universe)*
 *日期: 2026-02-09*
