--- a/docs/ui/阶段一设计：战略筹备.md
+++ b/docs/ui/阶段一设计：战略筹备.md
@@ -1,32 +1,41 @@
-# 阶段一设计：战略筹备 (最终实现规范)
+# 阶段一：战略筹备 (Strategic Phase) - 完备性报告
 
-## 1. 交互架构：三栏式工作台 + 底部动作控制岛
-采用了 MD3 + Genshin Glass 风格的沉浸式布局，将配置流程高度解耦：
+> **目标**: 完成战斗仿真的所有前置静态配置，包括队伍编成、属性精调、怪物设定及环境模拟。
 
-*   **左栏 (Entity Manager)**: 
-    *   **编队管理**: 动态添加角色占位符，支持悬浮删除。
-    *   **目标列表**: 受击目标（ENEMIES）的快速切换中心。
-*   **中栏 (Editor Pane)**: 
-    *   **角色/目标详情**: 负责等级、命座、武器、圣遗物及目标抗性的精细化数值录入。
-*   **右栏 (Tactical Radar)**: 
-    *   **可视化战术板**: 俯视视角展示角色（绿色）与敌人（红色）的物理位置。
-    *   **坐标系**: 中心点 (0,0)，映射游戏世界 ±10m 范围。
-*   **底部 (Action Console)**: 
-    *   **仿真主控**: 醒目的“开始仿真” Prominent Button。
-    *   **持久化控制**: 配置的保存/加载中心，集成系统状态监控。
+## 1. 核心架构与交互逻辑
+采用 **“目录-工作-摘要”** 的三栏分工模式：
+*   **左栏 (Selector Pane)**: 动态资源管理器。负责添加/删除角色与目标，作为全局导航中枢。
+*   **中栏 (Editor Pane)**: 上下文敏感工作区。根据左栏选中项，实时切换“选人网格”、“角色编辑器”、“怪物编辑器”或“环境编辑器”。
+*   **右栏 (Visual Pane)**: 环境摘要与战场可视化。提供物理坐标的实时像素级映射。
 
-## 2. 数据驱动与安全契约
-*   **配置中心化**: `PrototypeState` 维护与后端 `TeamFactory` 兼容的嵌套字典。
-*   **物理下沉**: `SimulationAssembler` 现已打通坐标传输，支持从 JSON 自动配置实体的初始物理坐标。
-*   **强类型约束**: 
-    *   武器选择列表根据角色 `Type` 自动过滤。
-    *   圣遗物套装使用带搜索的下拉选择（`ui.select`），并具备值合法性 Fallback。
+## 2. 已实现关键特性
 
-## 3. 核心技术解决
-*   **交互稳定性**: 圣遗物副词条编辑器采用局部渲染，解决了 NiceGUI 弹窗焦点丢失问题。
-*   **抗递归设计**: 分离静态容器与动态网格，彻底解决了搜索/过滤时的 `RecursionError`。
-*   **物理映射**: 实现了 UI 像素百分比与游戏米级坐标系的线性映射。
+### 2.1 智能数据绑定 (Data Binding)
+*   **双向同步**: 中栏所有输入框 (TextField) 均实现失焦自动写回 (on_blur sync)，确保数据实时性。
+*   **焦点保护**: 优化刷新策略，输入过程中不触发控件重建，彻底解决输入中断问题。
+
+### 2.2 仿真合法性过滤 (Registry Filtering)
+*   **实现态感知**: 界面自动读取 `core.registry`。
+*   **视觉分级**: 已编写 Python 逻辑类的角色/武器显示彩色；未实现的条目显示为灰色锁定状态，并禁用交互。
+*   **规则约束**: 圣遗物主词条根据部位自动锁定合法范围（如花固定生命、杯子固定元素加成）。
+
+### 2.3 原子化持久化 (Atomic Persistence)
+*   **全量配置**: 支持整场仿真环境的保存与加载 (`data/configs/`)。
+*   **原子模板**:
+    *   **角色预设**: 保存单人所有属性、武器及圣遗物。
+    *   **圣遗物套装**: 独立导出/导入 5 件套配置，支持跨角色复用。
+
+### 2.4 全自动响应式布局 (Smart Responsive V2)
+*   **多级断点**:
+    *   `> 1400px`: 全功能模式。
+    *   `1000px - 1400px`: 侧边栏折叠模式（左栏 80px）。
+    *   `< 1000px`: 极致生产力模式（右栏同步折叠至 60px），最大化中栏编辑区。
+
+## 3. 下一阶段展望：战术编排 (Tactical Phase)
+*   实现基于 **`ReorderableListView`** 的动作时间轴。
+*   支持动作参数的深度检视（如：技能是否命中、是否长按、是否消耗能量）。
+*   打通“战略配置”到“战术执行”的数据链路。
 
 ---
-*状态: 阶段一完工 (Phase 1 Completed)*
-*更新日期: 2026-02-08*
+*版本: v3.0*
+*更新日期: 2026-02-10*
