--- a/docs/ui/阶段二设计：战术编排.md
+++ b/docs/ui/阶段二设计：战术编排.md
@@ -1,38 +1,29 @@
-# 阶段二设计：战术编排 (Tactics Phase) - [已实现]
+# 阶段二：战术编排 (Tactical Phase) - 完备性报告
 
-## 1. 阶段概述
-阶段二的核心任务是定义实体的行为意图序列。本阶段采用“流式布局”以处理大规模动作序列，并将右栏定义为动作的深度参数编辑器。UI 保持纯净的采集职能，不预测位移，不校验逻辑。
+> **目标**: 实现基于时间轴的战斗指令编排系统，打通配置意图到仿真引擎的数据链路。
 
-## 2. 布局实现 (Final Implementation)
+## 1. 核心布局转换 (Pane Switching)
+当进入战术阶段时，系统通过 `AnimatedSwitcher` 执行全量布局重组：
+*   **左栏 (Action Library)**: 动作库。根据当前队伍动态生成“普通攻击”、“元素战技”等中文指令块。
+*   **中栏 (Action Timeline)**: 指令序列。采用流式布局 (Flow Layout)，支持动作块的自由拖拽排序。
+*   **右栏 (Action Inspector)**: 指令检视器。根据角色类的 `get_action_metadata()` 动态生成参数编辑器。
 
-### 2.1 左栏：动作库 (Action Library)
-*   **实现**: 动态遍历当前队伍成员，为每个角色提供 [A/E/Q/S] (普攻/战技/爆发/切人) 快捷按钮。
-*   **交互**: 点击按钮立即向全局 `actions` 序列追加指令。
+## 2. 关键特性实现
 
-### 2.2 中栏：动作序列流 (The Action Flow) —— **核心区域**
-*   **视觉形态**: **流式瓷砖 (Flow Tiles)**。
-    *   采用 `flex-wrap` 布局，动作块以玻璃质感卡片展示。
-    *   **动态主题**: 背景侧条根据角色元素属性自动配色。
-*   **交互规范**:
-    *   **选中高亮**: 点击动作块切换主色调边框，并同步刷新右栏。
-    *   **智能删除**: 删除中间动作时，后续索引自动平移，维持 `selected_action_idx` 指向正确。
+### 2.1 流式动作块 (Combo Flow Blocks)
+*   **视觉指引**: 采用“首字强化”排版（如“技”、“爆”字号加大并应用元素色），提升序列扫描效率。
+*   **拖拽排序**: 基于 `ft.Draggable` 与 `ft.DragTarget` 实现非线性排列下的位置交换逻辑。
+*   **参数预览**: 在动作块上实时显示“长按”、“未命中”等关键参数摘要。
 
-### 2.3 右栏：动作参数编辑器 (Action Inspector)
-*   **功能**: 提供单个动作的深度定制。
-*   **编辑项**:
-    *   **备注/意图**: 记录编排逻辑。
-    *   **位移矢量**: 静态录入预期位移偏移量 (ΔX, ΔZ)。
+### 2.2 动态元数据驱动 (Metadata-Driven UI)
+*   **契约化绑定**: 编辑器不再持有硬编码字段，而是通过 `CharacterClassMap` 反射查询角色特定的参数定义。
+*   **自动表单生成**: 支持 `select` (Dropdown), `number` (TextField), `bool` (Switch) 等多种交互类型。
 
-## 3. 技术架构：状态与视图分离
-为了应对复杂的交互，阶段二采用了模块化重构：
-*   **`prototype_state.py`**: 纯逻辑层，持有 `PrototypeState` 类，负责数据序列化与仿真触发。
-*   **`prototype_parts.py`**: 组件层，封装了圣遗物、角色编辑器等大型渲染块。
-*   **`prototype.py`**: 路由与外壳，负责阶段分发逻辑。
-
-## 4. 导出契约
-动作流导出为标准的 `sequence_config` JSON 列表，格式为：
-`[{"character_name": "...", "action_key": "...", "params": {...}}, ...]`
+### 2.3 单次仿真驱动逻辑 (Single Simulation Mode)
+*   **轻量化执行**: 弃用批处理模式，改为在 UI 协程中原地组装并运行 `Simulator`。
+*   **无损传输**: `export_config()` 将 UI 的意图参数完整序列化为标准仿真契约 JSON。
+*   **实时反馈**: 仿真进度与 DPS 结果实时推送到全局底栏 (Footer)。
 
 ---
-*版本: v1.2.0*
-*日期: 2026-02-09*
+*版本: v3.0.0*
+*日期: 2026-02-10*
