feat(batch): 实现分支宇宙批处理编辑器 V3.3 #36

--- a/docs/architecture/system/批量处理架构.md
+++ b/docs/architecture/system/批量处理架构.md
@@ -1,82 +1,42 @@
-# 架构设计：批量处理系统 (V2.3 - Batch Processing)
+# 架构设计：批量处理系统 (V3.3 - Rules-Driven Architecture)
 
 ## 1. 设计愿景
-批量处理（Batch Processing）旨在通过高并发仿真实现统计学验证与参数调优。V2.3 核心引入了 **“基准修改器 (Base Modifier)”** 模式：即通过定义一组“修改规则”，从单一的“基准配置 (Base Config)”中自动派生出大量仿真变体。
+批量处理（Batch Processing）在 V3.3 中实现了 **“零状态存储”** 架构。节点不再存储庞大的配置快照，而是仅记录变异规则，通过路径派生算法实时生成仿真任务，极大地降低了超大规模变异树的内存开销。
 
 ---
 
-## 2. 核心概念：基准修改器 (Base Modifier)
+## 2. 核心架构：规则派生模型
 
-不同于手动创建多份配置，用户仅需维护一个基准状态，并叠加一组 **修改规则 (Modification Rules)**。
+### 2.1 零快照机制
+*   **内存优化**: `SimulationNode` 仅保存 `ModifierRule`。
+*   **根配置 (Root Config)**: 仅根节点感知当前的“工作台环境”。
+*   **实时派生**: 使用 `ConfigGenerator.resolve_node_config` 递归应用路径上的所有规则，按需生成最终的仿真 JSON。
 
-### 2.1 执行流程图
-
-```mermaid
-graph TD
-    A[UI: 基准配置 Base Config] --> B{是否存在修改规则?}
-    B -- 是 --> C[ConfigGenerator: 执行笛卡尔积组合]
-    B -- 否 --> D[执行单次仿真]
-    
-    C --> E[派生变体队列 Variant Queue]
-    E --> F[Master: 分发任务至 ProcessPool]
-    
-    subgraph Worker Process
-        F --> G[子进程初始化 initialize_registry]
-        G --> H[create_simulator_from_config]
-        H --> I[TeamFactory: 根据变体 JSON 重新实例化实体]
-        I --> J[Simulator.run: 执行仿真]
-        J --> K[提取 Summary Metrics]
-    end
-    
-    K --> L[Master: 结果聚合与统计分析]
-    L --> M[UI: 展示报表与图表]
-```
-
-### 2.2 修改规则的构成
-每一条规则包含以下要素：
-*   **目标 (Target)**: 采用嵌套路径标识（如 `team[0].weapon.refinement`）。
-*   **模式 (Mode)**:
-    *   `SWEEP` (区间扫描): 定义 `[start, end, step]` 生成等差数列。
-    *   `REPLACE` (固定替换): 提供一个显式的值列表 `[val1, val2, ...]`。
-    *   `RANDOM` (随机波动): 定义随机范围，用于蒙特卡洛敏感度分析。
-*   **标签 (Label)**: 用于 UI 标识规则名称。
-
-### 2.2 变体生成逻辑
-`ConfigGenerator` 接收基准配置和规则集，执行 **笛卡尔积 (Cartesian Product)** 计算。
-例如：
-- 规则 A (3个值) ❌ 规则 B (4个值) = **12 个仿真样本**。
+### 2.2 节点类型
+1.  **普通节点**: 用户手动创建，可定义单一变异规则。
+2.  **区间锚点 (Range Anchor)**: 由区间扫描模式生成的容器节点，本身不带规则，仅作为组织者。
+3.  **受控节点 (Managed Node)**: 由区间扫描器批量生成的具体数值节点。它们受父级锚点生命周期管理，不可单独删除。
 
 ---
 
-## 3. 系统架构：主从模式 (Master-Worker)
+## 3. 变异逻辑：区间扫描 (Range Scanning)
 
-采用基于 `multiprocessing` 的并行计算架构，确保 CPU 密集型任务能够利用多核性能。
+### 3.1 自动展开逻辑
+*   用户定义 `[Start, End, Step]`。
+*   系统自动在当前节点下创建 N 个受控子节点。
+*   每个受控子节点继承父级的路径，并携带固定的 `REPLACE` 值。
 
-### 3.1 Master 节点 (Controller)
-*   **职责**: 解析规则集，生成变体队列，管理进程池并聚合轻量级结果。
-
-### 3.2 Worker 节点 (Headless Simulator)
-*   **职责**: 独立初始化环境，禁用单帧快照以提速，仅返回 Summary 指标。
-
----
-
-## 4. 隔离性与持久化设计 (Isolation & Persistence)
-
-### 4.1 进程级别隔离
-*   **无共享状态**: 每个 Worker 拥有独立的 Python 进程空间。
-*   **独立连接**: `MySQLDataRepository` 在 Worker 内部实例化。
-
-### 4.2 结构化日志持久化
-*   **日志文件隔离**: 每个样本对应一个 `run_{index}.log` 文件，存放在任务专属的时间戳子目录中。
+### 3.2 级联性
+*   父节点（锚点）的删除会触发整棵子树的销毁。
+*   受控节点允许继续繁衍手动分支，实现如 `[等级区间] -> [武器对比]` 的多维交叉测试。
 
 ---
 
-## 5. UI 交互流 (UX Flow)
+## 4. 数据持久化 (Persistence)
 
-1.  **基准确立**: 用户在工作台配置好当前队伍的基准状态。
-2.  **规则定义 (Modifier Editor)**: 在批量面板中添加规则。UI 支持点选变量路径并配置扫描参数。
-3.  **派生运行**: 点击仿真后，系统自动派生任务队列并展示 `BATCH: 已完成 / 总样本数` 进度。
+*   **结构化保存**: 仅序列化树形结构与规则。
+*   **环境解耦**: 不保存 `root_config`。这允许用户将一套复杂的“批处理方案”直接加载到不同的角色或队伍配置中，实现逻辑复用。
 
 ---
-*版本: V2.3 (Base Modifier Pattern)*
-*日期: 2026-02-09*
+*版本: V3.3 (Zero-Snapshot & Range Support)*
+*日期: 2026-02-11*
