feat: 更新文档以反映 V2.3.1 版本的架构变更与功能调整

--- a/docs/core/上下文环境.md
+++ b/docs/core/上下文环境.md
@@ -10,16 +10,17 @@
 
 ## 2. 关键组件
 - **`current_frame`**: 全局帧计数器。
-- **`space`**: [NEW] `CombatSpace` 实例，负责全量实体的空间坐标与碰撞检索。
-- **`event_engine`**: 层级事件引擎实例。
-- **`system_manager`**: 系统管理器，负责生命周期内各 `GameSystem`（如 `DamageSystem`）的装配。
-- **`team`**: 当前参与模拟的队伍实体容器。
-- **`target`**: 模拟的目标（敌人）引用（保持兼容）。
+- **`space`**: `CombatSpace` 实例，负责全量实体的空间坐标、阵营管理与物理碰撞检索。
+- **`event_engine`**: 局部事件引擎实例，负责分发该上下文内的所有游戏事件。
+- **`system_manager`**: 系统管理器，负责生命周期内各 `GameSystem`（如伤害、反应系统）的装配与驱动。
+- **`logger`**: 仿真专用日志记录器。
+
+> **注意**: V2.3 架构已彻底移除遗留的 `team` 和 `target` 字段。所有实体均由 `CombatSpace` 统一管理。
 
 ## 3. 使用规范
 
 ### 3.1 创建与初始化
-通常使用工厂函数创建，它会自动装配所有核心业务系统：
+使用工厂函数创建，它会自动装配所有核心业务系统并初始化环境：
 ```python
 from core.context import create_context
 
@@ -27,7 +28,7 @@ ctx = create_context()
 ```
 
 ### 3.2 作用域管理
-推荐使用 `with` 语句确保上下文在模拟结束后正确重置：
+推荐使用 `with` 语句确保上下文在模拟结束后正确重置与清理：
 ```python
 with ctx:
     # 在此作用域内，get_context() 将返回 ctx
@@ -35,26 +36,26 @@ with ctx:
 ```
 
 ### 3.3 获取上下文
-在任何业务逻辑（如技能、效果）中获取当前环境：
+在任何逻辑层（如角色技能、效果）中获取当前活跃环境：
 ```python
 from core.context import get_context
 
 ctx = get_context()
-print(f"当前帧: {ctx.current_frame}")
+current_f = ctx.current_frame
 ```
 
 ## 4. 生命周期
-1. **装配 (`create_context`)**: 扫描注册表，初始化所有 System。
-2. **驱动 (`advance_frame`)**: 
-    - 帧数自增。
-    - 驱动 `space.update()` 完成全场景实体的物理更新。
-3. **清理 (`reset`)**: 移除所有实体、清空事件队列，释放资源。
+1. **装配 (`create_context`)**：扫描注册表，初始化系统管理器并挂载标准子系统。
+2. **驱动 (`advance_frame`)**：
+    - 全局帧数自增。
+    - 驱动 `space.update()` 完成全场景实体的逻辑更新与状态清理。
+3. **重置 (`reset`)**：清空事件引擎的所有订阅，重置计数器，移除所有实体引用。
 
 ### 4.1 全场景快照 (`take_snapshot`)
-用于 UI 展示或持久化。
-- **功能**: 遍历 `CombatSpace` 中的所有实体，调用其 `export_state()` 方法。
-- **返回**: 包含当前帧数、全局状态及所有实体数据的纯字典。
+用于 UI 动态展示或数据持久化。
+- **功能**: 遍历 `CombatSpace` 中的所有阵营实体，调用其 `export_state()` 方法。
+- **返回**: 包含帧数、全局移动距离及全场景实体实时状态的纯字典。
 
 ---
-*版本: V2.2*
-*更新日期: 2026-02-07*
+*版本: V2.3.1 (Combat-Centric)*
+*更新日期: 2026-02-12*
