--- a/docs/core/效果系统.md
+++ b/docs/core/效果系统.md
@@ -1,42 +1,49 @@
 # Core - 效果系统 (Effect System)
 
-效果系统（Buff/Debuff）负责处理所有属性加成、持续伤害（DoT）和特殊状态逻辑。
+效果系统负责处理仿真中的所有增益 (Buff)、减益 (Debuff)、持续伤害 (DoT) 以及复杂的特殊状态逻辑。在 V2.3 架构中，效果系统进行了深度精简，以支持更纯粹的事件驱动计算。
 
-## 1. 物理隔离设计
-为了应对复杂的技能效果并保持代码整洁，效果逻辑按来源进行文件隔离：
-- `core/effect/base.py`: 定义生命周期基类。
-- `core/effect/stat_modifier.py`: 通用属性加成模板。
-- `core/effect/elemental.py`: 元素附魔与附着相关效果。
-- `core/effect/resonance.py`: 元素共鸣效果。
+## 1. 核心模块结构
+为了保持架构的灵活性，目前仅保留核心定义，具体的业务逻辑（如圣遗物套装、角色天赋）应在对应的子包中实现：
+- `core/effect/base.py`: 定义效果的基类 `Effect` 及其生命周期。
+- `core/effect/common.py`: 存放标准化的通用效果（如 `TalentEffect`, `ConstellationEffect`）。
 
-## 2. 核心基类 (`BaseEffect`)
-通过完整的生命周期钩子实现复杂的逻辑：
-- **`on_apply()`**: 获得效果瞬间触发（如：快照、属性持久修改）。
-- **`on_tick()`**: 每一帧触发（由 `CombatEntity.update()` 驱动，用于剧变反应或 DoT）。
-- **`on_remove()`**: 效果消失瞬间触发（如：属性还原）。
-- **`on_stack_added()`**: 当重复获得相同效果时的堆叠/刷新处理。
+## 2. 效果生命周期 (Hooks)
+`Effect` 实例通过以下钩子函数接入仿真的每一帧：
+- **`apply()`**: 激活效果。
+- **`remove()`**: 销毁效果，清理关联属性。
+- **`on_frame_update()`**: 每帧驱动逻辑（由挂载实体的 `on_frame_update` 调用），用于倒计时、叠层或持续触发逻辑。
 
-## 3. 堆叠规则 (`StackingRule`)
-控制同名效果的共存方式：
-- **`REFRESH`**: (默认) 刷新持续时间至新值（取最大值）。
-- **`ADD`**: 增加层数（调用 `on_stack_added`）。
-- **`INDEPENDENT`**: 独立存在，互不干扰。
+## 3. 两种加成实现路径
 
-## 4. 属性修改规范
-推荐使用 `StatModifierEffect` 处理简单的数值加成，它会自动处理添加与移除时的属性回退：
+### 3.1 静态属性修改 (Static Stats)
+适用于持久生效的加成（如：天赋常驻增加 20% 生命值）。
+- **实现**: 在 `apply()` 阶段直接修改角色的 `attribute_panel`。
+- **注意**: 必须在 `remove()` 时还原修改，以防脏数据。
+
+### 3.2 动态计算修正 (Dynamic Calculation)
+适用于基于特定条件的瞬时加成（如：重击时暴击率提高 15%）。
+- **实现**: 效果类需实现 `EventHandler` 接口，订阅 `EventType.BEFORE_CALCULATE` 事件。
+- **流程**:
+    1. 伤害系统准备计算前发布 `BEFORE_CALCULATE`。
+    2. 效果类在 `handle_event` 中检查当前 `damage_context` 的属性（如攻击类型）。
+    3. 若符合条件，直接修改 `event.data["damage_context"].stats` 中的中间变量。
 
 ```python
-# 示例：创建并应用一个 20% 攻击力加成，持续 10 秒
-from core.effect.stat_modifier import StatModifierEffect
-
-buff = StatModifierEffect(owner, "我的增益", {"攻击力%": 20.0}, duration=600)
-buff.apply()
+def handle_event(self, event: GameEvent):
+    if event.event_type == EventType.BEFORE_CALCULATE:
+        ctx = event.data["damage_context"]
+        # 判定是否为重击
+        if ctx.damage.damage_type == DamageType.CHARGED:
+            ctx.stats["暴击率"] += 15.0
 ```
 
-## 5. 与 V2 架构的整合
-- **去全局化**: 所有的 Effect 内部通过 `self.owner.ctx` 访问环境，确保状态隔离。
-- **自动清理**: 当 `CombatEntity` 被销毁时，所有挂载的 `active_effects` 会自动停止 `update`。
+## 4. [Important] 架构调整说明
+**V2.3 已移除 `core/effect/stat_modifier.py` 等旧版模板文件。** 
+
+**核心变更：**
+- **去属性硬编码**: 效果不再依赖于特定的字典键值对，而是通过事件上下文进行交互。
+- **生命周期所有权**: 效果的生存周期由其挂载的 `Character` 实例全权负责（通过 `self.talents` 或 `self.active_effects` 列表）。
 
 ---
-*版本: V2.0*
-*更新日期: 2026-02-07*
+*版本: V2.3.1 (Event-Driven Modifiers)*
+*更新日期: 2026-02-12*
