docs: 更新项目概览与核心技术栈，优化反应系统与效果系统文档

--- a/docs/core/反应系统.md
+++ b/docs/core/反应系统.md
@@ -1,66 +1,61 @@
 # Core - 反应系统 (Reaction System)
 
-反应系统负责仿真《原神》核心的元素交互逻辑。它基于**附着论 (Elemental Gauge Theory)**，通过事件驱动机制精确模拟元素量消耗、反应优先级、ICD (内部冷却时间) 以及连锁反应逻辑。
+反应系统负责仿真《原神》核心的元素交互逻辑。它基于**附着论 (Elemental Gauge Theory)**，通过事件驱动机制精确模拟元素量消耗、反应优先级、ICD 以及复杂的连锁反应逻辑。
 
 ## 1. 核心分层架构
 
 反应逻辑被拆分为三个核心层级，以实现物理判定与逻辑结算的解耦：
 
 ### 1.1 状态持有层 (`core.mechanics.aura`)
-*   **Aura (元素附着)**: 附着在实体上的元素状态，包含元素类型、当前剩余元素量 (Gauge) 及衰减速率。
-*   **Gauge (元素量)**: 严格遵循 1U/2U/4U 标准及其对应的数值转换规则。
+*   **Aura (元素附着)**: 附着在实体上的元素状态。
+*   **Gauge (元素量)**: 严格遵循 1U/2U/4U 标准。
+*   **周期性 Tick**: 负责驱动感电（每秒扣减/跳电）与燃烧（每 0.25s 挂火/爆发伤害）的计时逻辑。
 
 ### 1.2 物理交互层 (`core.combat_space`)
-*   **碰撞触发**: 当 `CombatSpace` 进行伤害广播时，命中的实体会通过 `handle_damage(damage)` 接口进入反应判定。
-*   **ICD 判定**: 系统根据 `AttackConfig` 中的 `icd_tag` 检索该实体的计数器/计时器，决定本次攻击是否能施加元素或触发反应。
+*   **物理化副作用**: 某些反应会产生具体的战场实体。
+    *   **结晶 (Crystallize)**: 产生 `CrystalShardEntity` (晶片)，角色靠近后自动拾取获得护盾。
+    *   **绽放 (Bloom)**: 产生 `DendroCoreEntity` (草原核)，存在 6s 或上限 5 个后自动爆炸。
+*   **空间广播**: 扩散 (Swirl) 会在命中点触发 6m 范围的物理广播，将元素传播至周围目标。
 
 ### 1.3 逻辑结算层 (`ReactionSystem`)
-*   **反应器工厂**: 根据碰撞双方的元素类型，匹配对应的反应逻辑（如增幅反应、剧变反应）。
-*   **结果反馈**: 反应产生的数值加成（如倍率提升）会通过 `damage.reaction_results` 反馈给伤害流水线。
+*   **剧变伤害产生**: 监听 `BEFORE_DAMAGE` 或反应 Tick 事件，生成独立的剧变伤害对象。
+*   **受击 ICD 机制**: 严格限制同一目标对同类剧变伤害的接受频率——**0.5s (30帧) 内最多受 2 次伤害**。
 
 ---
 
-## 2. 元素附着与 ICD 控制
+## 2. 反应效果详述
 
-### 2.1 ICD 计数器规则
-系统实现了标准的 ICD 机制：
-*   **默认规则**: 通常为 "3次命中或2.5秒" 重置。
-*   **独立附着**: 特殊技能通过自定义 `icd_tag` 绕过计数器（如香菱大招的每一段都能附着）。
-
-### 2.2 反应优先级 (Priority)
-在多元素共存（如激化、冻结状态）的情况下，系统严格遵循优先级：
-*   **火 > 水 > 雷** 的反应消耗顺序。
-*   多元素反应（如燃烧、绽放、超激化同时存在）的离散处理。
-
----
-
-## 3. 与伤害流水线的交互 (Reaction Flow)
-
-1.  **广播阶段**: `CombatSpace` 检测到攻击命中。
-2.  **感应阶段**: 目标实体调用 `apply_elemental_aura(damage)`：
-    *   检查目标的 ICD。
-    *   若通过 ICD，则执行元素量消耗计算。
-    *   若发生反应，创建 `ReactionResult` 并存入 `damage.reaction_results`。
-3.  **预处理阶段**: `DamagePipeline` 在计算前扫描 `reaction_results`：
-    *   **增幅反应 (蒸发/融化)**: 修改 `ctx.stats["反应基础倍率"]`。
-    *   **激化反应 (超/蔓激化)**: 修改 `ctx.stats["固定伤害值加成"]`。
-4.  **剧变阶段**: 若为超载、扩散等，则在结算阶段执行独立的剧变伤害公式。
+| 反应类型 | 类别 | 物理表现 / 副作用 |
+| :--- | :--- | :--- |
+| **蒸发/融化** | 增幅 | 无实体，直接提升本次伤害倍率。 |
+| **感电** | 剧变 | 水雷共存，每秒触发一次跳电伤害。 |
+| **超载** | 剧变 | 产生火元素范围伤害。 |
+| **超导** | 剧变 | 产生冰元素范围伤害，降低目标 **40% 物理抗性**，持续 12s。 |
+| **扩散** | 剧变 | 造成对应元素伤害，并将该元素传播至 6m 内的其他实体。 |
+| **结晶** | 状态 | 掉落对应元素晶片，拾取后获得 15s 属性匹配护盾。 |
+| **绽放** | 剧变 | 生成草原核。受火/雷攻击触发烈/超绽放。 |
+| **激化** | 状态 | 产生激元素。后续雷/草攻击享受固定伤害值加成。 |
 
 ---
 
-## 4. 特殊机制支持
+## 3. 元素附着规则 (Gauge Theory)
 
-*   **草/雷/水反应链**: 完整模拟激化状态、草原核生成以及后续的超/烈绽放。
-*   **夜魂机制 (纳塔)**: `NatlanSystem` 监听伤害事件，基于队伍元素分布触发“夜魂迸发”。
-*   **环境元素**: 支持非战斗实体（如水面、草丛）作为反应参与者。
+### 3.1 刷新规则 (Refresh)
+当实体已带有同元素附着时：
+- **元素量**: 取当前剩余量与新附着量中的**较大值**。
+- **衰减速率**: 强制覆盖为**新附着量的衰减速率**（关键：1U 无法覆盖 2U 的量，但会加快其消失）。
 
----
-
-## 5. 开发指南
-
-1.  **新增反应**: 若需添加新反应，需在 `core/action/reaction.py` 中定义新的 `ElementalReactionType`，并在 `ReactionSystem` 中注册处理器。
-2.  **自定义附着**: 在角色的 `skills.py` 中，通过配置 `AttackConfig(element_u=2.0, icd_tag="Special")` 来实现强元素附着。
+### 3.2 反应消耗 (Tax)
+- **增幅反应**: 存在 2.0x (强克制) 和 0.5x (弱克制) 的消耗比。
+- **风/岩反应**: 固定的 0.5x 消耗比，且作为后置元素时永不残留。
 
 ---
-*版本: V2.3.1*
+
+## 4. 开发指南
+
+1.  **受击限制**: 所有剧变伤害均通过 `_generate_transformative_damage` 产生，自动享受受击 ICD 保护。
+2.  **自定义反应**: 若需增加纳塔等特殊反应，在 `core/action/reaction.py` 定义枚举并在 `ReactionSystem` 注册分支。
+
+---
+*版本: V2.3.2 (Physical Side-effects)*
 *更新日期: 2026-02-12*
