--- a/docs/core/效果系统.md
+++ b/docs/core/效果系统.md
@@ -44,6 +44,20 @@ def handle_event(self, event: GameEvent):
 - **去属性硬编码**: 效果不再依赖于特定的字典键值对，而是通过事件上下文进行交互。
 - **生命周期所有权**: 效果的生存周期由其挂载的 `Character` 实例全权负责（通过 `self.talents` 或 `self.active_effects` 列表）。
 
+## 5. 通用效果类 (Standard Classes)
+
+为了减少重复代码，系统在 `core/effect/common.py` 中提供了一系列开箱即用的标准效果：
+
+### 5.1 StatModifierEffect
+用于直接修改实体的属性面板。
+- **优点**: 自动处理 `on_apply` 时的加法和 `on_remove` 时的减法，避免属性泄露。
+- **场景**: 天赋常驻加成、技能触发的临时攻击力提升。
+
+### 5.2 ResistanceDebuffEffect
+专门用于削减目标抗性。
+- **参数**: 接收元素列表（如 `["火", "冰"]`）和削减比例。
+- **场景**: 超导（-40% 物理）、万叶翠绿套（-40% 对应元素）。
+
 ---
 *版本: V2.3.1 (Event-Driven Modifiers)*
 *更新日期: 2026-02-12*
